# ServerAPI

./: .clang-format  .gitignore  AsaApi.sln  CMakeLists.txt  LICENSE  README.md  stub.cpp
AsaApi/: AsaApi.def  AsaApi.vcxproj  AsaApi.vcxproj.filters  main.cpp  vcpkg.json
AsaApi/Core/Private/: Cache.cpp  Cache.h  Commands.cpp  Commands.h  Helpers.cpp  Helpers.h  Hooks.cpp  Hooks.h  IBaseApi.h  Logger.cpp  Offsets.cpp  Tools.cpp
AsaApi/Core/Private/Ark/: ApiUtils.cpp  ApiUtils.h  ArkBaseApi.cpp  ArkBaseApi.h  HooksImpl.cpp  HooksImpl.h
AsaApi/Core/Private/PDBReader/: PDBReader.cpp  PDBReader.h  pdbignores.txt
AsaApi/Core/Private/PluginManager/: PluginManager.cpp  PluginManager.h
AsaApi/Core/Private/Tools/: Requests.cpp  Timer.cpp  Tools.cpp
AsaApi/Core/Private/UE/: UE.cpp
AsaApi/Core/Public/: AsaApiModUtils.hpp  IApiUtils.h  ICommands.h  IHooks.h  Requests.h  Timer.h  Tools.h
AsaApi/Core/Public/API/: Base.h  Enums.h  Fields.h
AsaApi/Core/Public/API/ARK/: Actor.h  Ark.h  Buff.h  ExtensionsDeclaration.h  ExtensionsDefinition.h  GameMode.h  Inventory.h  ModParamStructs.h  Other.h  PrimalStructure.h  UE.h
AsaApi/Core/Public/API/Helpers/: Helpers.h
AsaApi/Core/Public/API/UE/: Core.h  CoreGlobals.h  CoreMinimal.h  CoreSharedPCH.h  CoreTypes.h
AsaApi/Core/Public/API/UE/Algo/: FindSortedStringCaseInsensitive.h
AsaApi/Core/Public/API/UE/HAL/: Event.h  (+35 more)
AsaApi/Core/Public/Ark/: ArkApiUtils.h  AsaApiUtilsMessagingManager.h  MessagingManager.h
Configs/: config.json
Core/Private/: Base.cpp
Core/Public/: Base.ixx  macro.h
Core/Public/ASA/: GameState.ixx
(+271 files in other folders)
